--- a/about.html
+++ b/about.html
@@ -88,27 +88,23 @@
 
 <!-- ================= ABOUT HERO ================= -->
 
-<section class="about-hero">
-
-    <div class="about-hero-content">
-
+<section class="about-hero hero-3d-bg">
+    <canvas id="hero-canvas"></canvas>
+    <div class="about-hero-content" style="position: relative; z-index: 2;">
         <h1>About Us</h1>
-
         <p>
             We are a passionate engineering team committed to delivering
             end-to-end industrial solutions with excellence, safety, and
             innovation at our core.
         </p>
-
     </div>
-
-    <div class="about-hero-image">
-
-        <img src="about1.png" alt="Brigantine Engineering Team">
-
+    <div class="about-hero-image" style="position: relative; z-index: 2;">
+        <img src="about1.webp" alt="Brigantine Engineering Team">
     </div>
-
 </section>
+
+<!-- Three.js Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js"></script>
 
 
 
@@ -159,7 +155,7 @@
 
     <div class="about-image-left">
 
-        <img src="about2.png" alt="Engineering Excellence">
+        <img src="about2.webp" alt="Engineering Excellence">
 
     </div>
 
