--- a/contact.html
+++ b/contact.html
@@ -57,16 +57,19 @@
 
 <!-- ================= HERO ================= -->
 
-<section class="contact-hero">
-
-  <h1>Contact Us</h1>
-
-  <p>
-    We are ready to help you — reach out to us via form,
-    phone, or visit us at our location below.
-  </p>
-
+<section class="contact-hero hero-3d-bg">
+  <canvas id="hero-canvas"></canvas>
+  <div style="position: relative; z-index: 2; text-align: center; width: 100%;">
+    <h1>Contact Us</h1>
+    <p>
+      We are ready to help you — reach out to us via form,
+      phone, or visit us at our location below.
+    </p>
+  </div>
 </section>
+
+<!-- Three.js Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js"></script>
 
 
 
