--- a/services.html
+++ b/services.html
@@ -55,8 +55,9 @@
       </div>
     </header>
 
-    <section class="services-hero-split">
-      <div class="hero-split-content">
+    <section class="services-hero-split hero-3d-bg">
+      <canvas id="hero-canvas"></canvas>
+      <div class="hero-split-content" style="position: relative; z-index: 2;">
         <h1>Services</h1>
         <p>
           Providing end-to-end engineering services with a focus on quality,
@@ -66,6 +67,9 @@
         <a href="#services" class="hero-split-btn">Discover our services</a>
       </div>
     </section>
+
+    <!-- Three.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js"></script>
 
     <section class="service-categories">
       <div class="categories-grid">
@@ -159,7 +163,7 @@
             </div>
             <div class="timeline-item-image">
               <img
-                src="service1.png"
+                src="electrical_troubleshooting_and_repair.webp"
                 alt="Electrical Troubleshooting & Repair"
               />
             </div>
@@ -183,7 +187,7 @@
               >
             </div>
             <div class="timeline-item-image">
-              <img src="service2.png" alt="Reconditioning of Decanters" />
+              <img src="reconditioning_of_decanters.webp" alt="Reconditioning of Decanters" />
             </div>
           </div>
         </div>
@@ -205,7 +209,7 @@
               >
             </div>
             <div class="timeline-item-image">
-              <img src="service3.png" alt="High-Speed Separators" />
+              <img src="high_speed_separators.webp" alt="High-Speed Separators" />
             </div>
           </div>
         </div>
@@ -230,7 +234,7 @@
             </div>
             <div class="timeline-item-image">
               <img
-                src="service4.png"
+                src="gasketed_plate_heat_exchanger.webp"
                 alt="Gasketed Plate Heat Exchanger Services"
               />
             </div>
